fixed alignment for BYOW

--- a/src/styles/components/pages/pregame.scss
+++ b/src/styles/components/pages/pregame.scss
@@ -18,7 +18,8 @@
 	}
 	@include mid-below {
 		justify-content: center;
-		margin-bottom: 1.6rem;
+		margin: 0 0 1.6rem 0;
+    	width: 100%;
 	}
 }
 
@@ -68,6 +69,10 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: baseline;
+	@include mid-below {
+		flex-direction: column;
+		align-items: center;;
+	}
 }
 
 .timer-container {
